[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/prefabs/PauseManu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/buttons/test_2.tres" type="Theme" id=2]
[ext_resource path="res://src/prefabs/UIs/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shaders/blur.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
render_priority = 3
shader = ExtResource( 4 )
shader_param/amount = 0.75

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 0.588235, 0, 0, 0, 0.196078 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
width = 640
height = 360
fill_from = Vector2( 1, 0 )
fill_to = Vector2( 1, 0.5 )
repeat = 2

[node name="PauseManu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="."]
pause_mode = 2
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
alignment = 1

[node name="Resume" type="Button" parent="Buttons"]
margin_left = 195.0
margin_top = 118.0
margin_right = 445.0
margin_bottom = 143.0
rect_min_size = Vector2( 250, 25 )
focus_neighbour_top = NodePath("../Main Menu")
focus_neighbour_bottom = NodePath("../Save")
size_flags_horizontal = 4
text = "Resume"

[node name="Save" type="Button" parent="Buttons"]
margin_left = 195.0
margin_top = 151.0
margin_right = 445.0
margin_bottom = 176.0
rect_min_size = Vector2( 250, 25 )
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Options")
size_flags_horizontal = 4
text = "Save"

[node name="Options" type="Button" parent="Buttons"]
margin_left = 195.0
margin_top = 184.0
margin_right = 445.0
margin_bottom = 209.0
rect_min_size = Vector2( 250, 25 )
focus_neighbour_top = NodePath("../Save")
focus_neighbour_bottom = NodePath("../Main Menu")
size_flags_horizontal = 4
text = "Options"

[node name="Main Menu" type="Button" parent="Buttons"]
margin_left = 195.0
margin_top = 217.0
margin_right = 445.0
margin_bottom = 242.0
rect_min_size = Vector2( 250, 25 )
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Resume")
size_flags_horizontal = 4
text = "Main Menu"

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Main Menu" to="." method="_on_Main_Menu_pressed"]
